k8s/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gorengan-index
  namespace: apps
  labels:
    app: gorengan-index
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gorengan-index
  template:
    metadata:
      labels:
        app: gorengan-index
    spec:
      imagePullSecrets:
        - name: ghcr-pull-secret
      nodeSelector:
        dedicated: market-data
      tolerations:
        - key: "dedicated"
          operator: "Equal"
          value: "market-data"
          effect: "NoSchedule"
      containers:
        - name: gorengan-index
          image: ghcr.io/jati251/gorengan-index:1a7313e16a8bc4ee2ffa575ccb05bc790fd90a18
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "50m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: gorengan-index
  namespace: apps
spec:
  selector:
    app: gorengan-index
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
