k8s/questdb.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: questdb
  namespace: apps
  labels:
    app: questdb
spec:
  serviceName: questdb-svc
  replicas: 1
  selector:
    matchLabels:
      app: questdb
  template:
    metadata:
      labels:
        app: questdb
    spec:
      nodeSelector:
        dedicated: market-data
      tolerations:
        - key: "dedicated"
          operator: "Equal"
          value: "market-data"
          effect: "NoSchedule"
      containers:
        - name: questdb
          image: questdb/questdb:8.2.1
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 9000
              protocol: TCP
            - name: ilp
              containerPort: 9009
              protocol: TCP
            - name: pgwire
              containerPort: 8812
              protocol: TCP
          volumeMounts:
            - name: questdb-data
              mountPath: /var/lib/questdb
          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "2000m"
              memory: "1024Mi"
  volumeClaimTemplates:
    - metadata:
        name: questdb-data
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: "local-path"
        resources:
          requests:
            storage: 40Gi
---
apiVersion: v1
kind: Service
metadata:
  name: questdb-svc
  namespace: apps
  labels:
    app: questdb
spec:
  selector:
    app: questdb
  ports:
    - name: http
      port: 9000
      targetPort: 9000
    - name: ilp
      port: 9009
      targetPort: 9009
    - name: pgwire
      port: 8812
      targetPort: 8812
